--- a/demo/index.html
+++ b/demo/index.html
@@ -1,168 +1,266 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Awesome Medium Editor!</title>
-    <link rel="stylesheet" href="css/demo.css">
-    <link rel="stylesheet" href="css/font-awesome.css">
-    <link rel="stylesheet" href="../dist/css/medium-editor.css">
-    <link rel="stylesheet" href="../dist/css/themes/default.css" id="medium-editor-theme">
 
-    <!-- JS -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/medium-editor.js"></script>
-    <script src="js/handlebars.runtime.min.js"></script>
-    <script src="js/medium-editor-insert-plugin.js"></script>
-    <script src="../dist/js/medium-editor.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <title>Awesome Medium Editor!</title>
+        <link rel="stylesheet" href="css/demo.css">
+        <link rel="stylesheet" href="css/font-awesome.css">
+        <link rel="stylesheet" href="../dist/css/medium-editor.css">
+        <link rel="stylesheet" href="../dist/css/themes/default.css" id="medium-editor-theme">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/medium-editor-insert-plugin.min.css">
+        <!-- JS -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="js/medium-editor.js"></script>
+        <script src="js/handlebars.runtime.min.js"></script>
+        <script src="js/medium-editor-insert-plugin.js"></script>
+        <script src="../dist/js/medium-editor.js"></script>
 
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-</head>
-<body>
-    <div id="container">
-        <div class="jumbotron">
-            <div class="container">
-                <h1>Awesome Medium Editor!</h1>
-                <p class="text-center">Created with JavaScript and <i class="fa fa-heart" aria-hidden="true"></i> from Iran. Browse the code on <a href="https://github.com/amlashi-sadra/awesome-medium-editor/blob/master/package.json"><i class="fa fa-github" aria-hidden="true"></i>
-                    </span> GitHub</a>.</p>
-                <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
-            </div>
-        </div>
+        <!-- CSS -->
+        <link rel="stylesheet" href="css/medium-editor-insert-plugin.min.css">
 
 
-        <div class="editable">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-        </div>
-    </div>
+        <!-- Optional theme -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 
-    <script>
+        <!-- Latest compiled and minified JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-        var insertImageExtension = MediumEditor.Extension.extend({
-            name: 'insertImage',
+        <script>
+            $(document).ready(function(){
 
-            init: function () {
-                this.button = this.document.createElement('button');
-                this.button.classList.add('medium-editor-action');
-                this.button.innerHTML = '<i class="fa fa-picture-o" aria-hidden="true"></i>';
-                this.button.title = 'Insert Image';
+                var dirRtl = $('#dir-rtl');
+                var dirLtr = $('#dir-ltr');
+                var editableContainer = document.getElementById("editable-container");
 
-                this.on(this.button, 'click', this.handleClick.bind(this));
-            },
-
-            getButton: function () {
-                return this.button;
-            },
-
-            handleClick: function (event) {
-                this.base.checkContentChanged();
-
-                console.log(this.document.getSelection().toString().trim());
-
-                var imgSrc = this.document.getSelection().toString().trim();
-                var theHTML = '<div class="medium-insert-images">' + '<figure contenteditable="false">' +
-                        '<img src="'+imgSrc+'" alt="">'
-                        + '<figcaption contenteditable="true">So, What is the caption?</figcaption>'
-                        +'</figure></div><br/>';
-
-
-                insertImageElements(theHTML, '')
-            }
-
-        });
-
-        function insertImageElements(html, selectPastedContent){
-
-            var sel, range;
-            if (window.getSelection) {
-                // IE9 and non-IE
-                sel = window.getSelection();
-                if (sel.getRangeAt && sel.rangeCount) {
-                    range = sel.getRangeAt(0);
-                    range.deleteContents();
-
-                    // Range.createContextualFragment() would be useful here but is
-                    // only relatively recently standardized and is not supported in
-                    // some browsers (IE9, for one)
-                    var el = document.createElement("div");
-                    el.innerHTML = html;
-                    var frag = document.createDocumentFragment(), node, lastNode;
-                    while ( (node = el.firstChild) ) {
-                        lastNode = frag.appendChild(node);
+                $(dirRtl).click(function(){
+                    if (!$(this).hasClass("active")) {
+                        dirRtl.removeClass('btn-default');
+                        dirRtl.addClass('btn-warning');
+                        dirLtr.removeClass('btn-warning');
+                        dirLtr.addClass('btn-default');
+                        document.getElementById("editable-container").style.direction = 'rtl';
                     }
-                    var firstNode = frag.firstChild;
-                    range.insertNode(frag);
+                });
 
-                    // Preserve the selection
-                    if (lastNode) {
-                        range = range.cloneRange();
-                        range.setStartAfter(lastNode);
-                        if (selectPastedContent) {
-                            range.setStartBefore(firstNode);
-                        } else {
-                            range.collapse(true);
-                        }
-                        sel.removeAllRanges();
-                        sel.addRange(range);
+                $(dirLtr).click(function(){
+                    if (!$(this).hasClass("active")) {
+                        dirLtr.removeClass('btn-default');
+                        dirLtr.addClass('btn-warning');
+                        dirRtl.removeClass('btn-warning');
+                        dirRtl.addClass('btn-default');
+                        document.getElementById("editable-container").style.direction = 'ltr';
                     }
-                }
-            } else if ( (sel = document.selection) && sel.type != "Control") {
-                // IE < 9
-                var originalRange = sel.createRange();
-                originalRange.collapse(true);
-                sel.createRange().pasteHTML(html);
-                if (selectPastedContent) {
-                    range = sel.createRange();
-                    range.setEndPoint("StartToStart", originalRange);
-                    range.select();
-                }
-            }
+                });
 
 
-        }
-
-        var editor = new MediumEditor('.editable', {
-            buttonLabels: 'fontawesome',
-             toolbar: {
-                /* These are the default options for the toolbar,
-                   if nothing is passed this is what is used */
-                allowMultiParagraphSelection: true,
-                buttons: ['bold', 'italic', 'underline', 'anchor', 'h1', 'h2', 'h3', 'quote', 'strikethrough', 'orderedlist', 'unorderedlist', 'indent', 'outdent', 'justifyCenter', 'justifyFull', 'justifyLeft', 'justifyRight', 'removeFormat', 'insertImage'],
-                diffLeft: 0,
-                diffTop: -10,
-                firstButtonClass: 'medium-editor-button-first',
-                lastButtonClass: 'medium-editor-button-last',
-                relativeContainer: null,
-                standardizeSelectionStart: false,
-                static: false,
-
-                /* options which only apply when static is true */
-                align: 'center',
-                sticky: false,
-                updateOnEmptySelection: false
-            },
-            extensions: {
-                'insertImage': new insertImageExtension()
-            }
-        });
-
-        $(function () {
-            $('.editable').mediumInsert({
-                editor: editor
             });
-        });
+        </script>
+
+        <style>
+            *:focus {
+                outline:none !important;
+            }
+            .medium-insert-buttons{
+                visibility: hidden;
+            }
+        </style>
 
 
-    </script>
-</body>
+
+    </head>
+
+    <body>
+
+        <div id="container">
+
+            <div class="jumbotron">
+                <div class="container">
+
+                    <h1><i class="fa fa-magic" aria-hidden="true"></i> Awesome Medium Editor!</h1>
+
+                    <p class="text-center">
+                        Created with JavaScript and <i class="fa fa-heart" aria-hidden="true"></i> from Iran. Browse the code on <a href="https://github.com/amlashi-sadra/awesome-medium-editor/blob/master/package.json"><i class="fa fa-github" aria-hidden="true"></i>
+                        </span> GitHub</a>.
+                    </p>
+
+
+                    <did class="row">
+
+                        <div class="bg-info col-md-5">
+
+                            <div class="container" align="center">
+
+                                <h4>Select Direction</h4><br/>
+
+                                <div class="col-xs-2"></div>
+                                <button type="button" class="btn btn-warning col-xs-3" id="dir-ltr">LTR</button>
+                                <div class="col-md-2"></div>
+                                <button type="button" class="btn btn-default col-xs-3" id="dir-rtl">RTL</button>
+                                <div class="col-xs-2"></div>
+
+                            </div><br/>
+
+                        </div>
+
+                        <div class="bg-info col-md-1"> </div>
+
+                        <div class="bg-success col-md-5">
+
+                            <div class="container" align="center">
+
+                                <h4>Extract your extension</h4><br/>
+
+                                <button type="button" class="btn btn-success col-xs-3">HTML</button>
+                                <div class="col-md-1"></div>
+                                <button type="button" class="btn btn-success col-xs-3">Mardown</button>
+                                <div class="col-md-1"></div>
+                                <button type="button" class="btn btn-success col-xs-3">Hexo</button>
+
+                            </div><br/>
+
+                        </div>
+
+                    </did>
+
+
+                </div>
+            </div>
+
+            <div class="jumbotron">
+                <div class="container">
+
+                <div class="container">
+
+                    <br/> <div class="editable" id="editable-container">  </div>
+                </div><br/>
+            </div>
+            </div>
+
+        </div>
+
+        <script>
+
+            var insertImageExtension = MediumEditor.Extension.extend({
+                name: 'insertImage',
+
+                init: function () {
+                    this.button = this.document.createElement('button');
+                    this.button.classList.add('medium-editor-action');
+                    this.button.innerHTML = '<i class="fa fa-picture-o" aria-hidden="true"></i>';
+                    this.button.title = 'Insert Image';
+
+                    this.on(this.button, 'click', this.handleClick.bind(this));
+                },
+
+                getButton: function () {
+                    return this.button;
+                },
+
+                handleClick: function (event) {
+                    this.base.checkContentChanged();
+
+                    console.log(this.document.getSelection().toString().trim());
+
+                    var imgSrc = this.document.getSelection().toString().trim();
+                    var theHTML = '<div class="medium-insert-images">' + '<figure contenteditable="false">' +
+                            '<img src="'+imgSrc+'" alt="">'
+                            + '<figcaption contenteditable="true">So, What is the caption?</figcaption>'
+                            +'</figure></div><br/>';
+
+
+                    insertImageElements(theHTML, '')
+                }
+
+            });
+
+            function insertImageElements(html, selectPastedContent){
+
+                var sel, range;
+                if (window.getSelection) {
+                    // IE9 and non-IE
+                    sel = window.getSelection();
+                    if (sel.getRangeAt && sel.rangeCount) {
+                        range = sel.getRangeAt(0);
+                        range.deleteContents();
+
+                        // Range.createContextualFragment() would be useful here but is
+                        // only relatively recently standardized and is not supported in
+                        // some browsers (IE9, for one)
+                        var el = document.createElement("div");
+                        el.innerHTML = html;
+                        var frag = document.createDocumentFragment(), node, lastNode;
+                        while ( (node = el.firstChild) ) {
+                            lastNode = frag.appendChild(node);
+                        }
+                        var firstNode = frag.firstChild;
+                        range.insertNode(frag);
+
+                        // Preserve the selection
+                        if (lastNode) {
+                            range = range.cloneRange();
+                            range.setStartAfter(lastNode);
+                            if (selectPastedContent) {
+                                range.setStartBefore(firstNode);
+                            } else {
+                                range.collapse(true);
+                            }
+                            sel.removeAllRanges();
+                            sel.addRange(range);
+                        }
+                    }
+                } else if ( (sel = document.selection) && sel.type != "Control") {
+                    // IE < 9
+                    var originalRange = sel.createRange();
+                    originalRange.collapse(true);
+                    sel.createRange().pasteHTML(html);
+                    if (selectPastedContent) {
+                        range = sel.createRange();
+                        range.setEndPoint("StartToStart", originalRange);
+                        range.select();
+                    }
+                }
+
+
+            }
+
+            var editor = new MediumEditor('.editable', {
+                buttonLabels: 'fontawesome',
+                 toolbar: {
+                    /* These are the default options for the toolbar,
+                       if nothing is passed this is what is used */
+                    allowMultiParagraphSelection: true,
+                    buttons: ['bold', 'italic', 'underline', 'anchor', 'h1', 'h2', 'h3', 'quote', 'strikethrough', 'orderedlist', 'unorderedlist', 'indent', 'outdent', 'justifyCenter', 'justifyFull', 'justifyLeft', 'justifyRight', 'removeFormat', 'insertImage'],
+                    diffLeft: 0,
+                    diffTop: -10,
+                    firstButtonClass: 'medium-editor-button-first',
+                    lastButtonClass: 'medium-editor-button-last',
+                    relativeContainer: null,
+                    standardizeSelectionStart: false,
+                    static: false,
+
+                    /* options which only apply when static is true */
+                    align: 'center',
+                    sticky: false,
+                    updateOnEmptySelection: false
+                },
+                extensions: {
+                    'insertImage': new insertImageExtension()
+                }
+            });
+
+            $(function () {
+                $('.editable').mediumInsert({
+                    editor: editor
+                });
+            });
+
+
+        </script>
+
+    </body>
+
 </html>
