--- a/demo/index.html
+++ b/demo/index.html
@@ -15,6 +15,8 @@
         <script src="js/handlebars.runtime.min.js"></script>
         <script src="js/medium-editor-insert-plugin.js"></script>
         <script src="../dist/js/medium-editor.js"></script>
+        <script src="js/medium-editor-multi-placeholders-plugin.min.js"></script>
+
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/medium-editor-insert-plugin.min.css">
@@ -228,8 +230,9 @@
             }
 
             var editor = new MediumEditor('.editable', {
+                placeholder: false,
                 buttonLabels: 'fontawesome',
-                 toolbar: {
+                toolbar: {
                     /* These are the default options for the toolbar,
                        if nothing is passed this is what is used */
                     allowMultiParagraphSelection: true,
@@ -248,7 +251,19 @@
                     updateOnEmptySelection: false
                 },
                 extensions: {
-                    'insertImage': new insertImageExtension()
+                    'insertImage': new insertImageExtension(),
+                    'multi_placeholder': new MediumEditorMultiPlaceholders({
+                        placeholders: [
+                            {
+                                tag: 'h1',
+                                text: 'Title'
+                            },
+                            {
+                                tag: 'p',
+                                text: 'Tell your story...'
+                            }
+                        ]
+                    })
                 }
             });
 
