Add notification for code

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,6 @@
         <script src="dist/js/medium-editor.js"></script>
         <script src="dist/js/handlebars.runtime.min.js"></script>
         <script src="dist/js/medium-editor-insert-plugin.js"></script>
-        <script src="dist/js/medium-editor-multi-placeholders-plugin.min.js"></script>
         <script src="dist/js/to-markdown.js"></script>
         <script src="dist/js/bootstrap.min.js" ></script>
         <script src="dist/js/toastr.min.js"></script>
@@ -46,7 +45,7 @@
                     <h1><i class="fa fa-magic" aria-hidden="true"></i> Awesome Medium Editor!</h1>
 
                     <p class="text-center">
-                        Created with JavaScript and <i class="fa fa-heart" aria-hidden="true"></i> from Iran. Browse the code on <a href="https://github.com/amlashi-sadra/awesome-medium-editor/blob/master/package.json"><i class="fa fa-github" aria-hidden="true"></i>
+                        Created with JavaScript and <i class="fa fa-heart" aria-hidden="true"></i> from Iran. Browse the code on <a href="https://github.com/amlashi-sadra/awesome-medium-editor"><i class="fa fa-github" aria-hidden="true"></i>
                         </span> GitHub</a>.
                     </p>
 
@@ -110,6 +109,11 @@
 
                             <h4>by <a href="http://isapanah.com">Sadra</a> & <i>Powered by</i> <a href="https://yabwe.github.io/medium-editor/">Medium Editor</a>, <a href="https://github.com/domchristie/to-markdown">toMarkdown</a>, <a href="https://codeseven.github.io/toastr/">Toastr</a> + <a href="https://github.com/amlashi-sadra/awesome-medium-editor/graphs/contributors">people around the world</a>
                             </h4>
+
+                            <a href="https://github.com/amlashi-sadra/awesome-medium-editor"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
+                            <a href="https://twitter.com/sadra_amlashi"><i class="fa fa-twitter-square fa-3x" aria-hidden="true"></i></a>
+                            <a href="http://isapanah.com"><i class="fa fa-globe fa-3x" aria-hidden="true"></i></a>
+
                         </div>
                     </section>
 
